@startuml

title __FOOGLE's Class Diagram__\n

  package com.foogle {
    class Main {
        {static} + resultcount : int
        {static} + MAX : int
        {static} + ANSI_RESET : String
        {static} + ANSI_BLACK : String
        {static} + ANSI_RED : String
        {static} + ANSI_GREEN : String
        {static} + ANSI_YELLOW : String
        {static} + ANSI_BLUE : String
        {static} + ANSI_PURPLE : String
        {static} + ANSI_CYAN : String
        {static} + ANSI_WHITE : String
        {static} + ANSI_BLACK_BACKGROUND : String
        {static} + ANSI_RED_BACKGROUND : String
        {static} + ANSI_GREEN_BACKGROUND : String
        {static} + ANSI_YELLOW_BACKGROUND : String
        {static} + ANSI_BLUE_BACKGROUND : String
        {static} + ANSI_PURPLE_BACKGROUND : String
        {static} + ANSI_CYAN_BACKGROUND : String
        {static} + ANSI_WHITE_BACKGROUND : String
        {static} + main()
        {static} + addArticle()
        {static} + delArticle()
        {static} + searchTitle()
        {static} + searchPhrase()
        {static} + searchAuthor()
    }
  }
  

  package com.foogle {
    class article {
        - article_title : String
        - article_body : String
        - article_author : String
        + article()
        + getArticle_author()
        + setArticle_author()
        + getArticle_title()
        + setArticle_title()
        + getArticle_body()
        + setArticle_body()
        + writeArticle()
        + readArticle()
    }
  }
  

  package com.foogle {
    class bmPatternMatch {
        + findPattern()
        + indexOf()
        - makeCharTable()
        {static} - makeOffsetTable()
        {static} - isPrefix()
        {static} - suffixLength()
        {static} + main()
    }
  }
  

  package com.foogle {
    class fileHandler {
        ~ filename : String
        ~ in : BufferedReader
        ~ out : PrintWriter
        {static} + buffer : int
        + fileHandler()
        + fileHandler()
        + readFile()
        + getLine()
        + readArticle()
        + getArticle()
        + writeFile()
        + writeFile()
        + delFile()
        + getFiles()
        + authorIndex()
        + getAuthorArticles()
        {static} + main()
    }
  }
  

  package com.foogle {
    class patternmatch {
        {static} + ANSI_YELLOW : String
        {static} + ANSI_BLACK : String
        {static} + ANSI_GREEN : String
        {static} + ANSI_CYAN : String
        ~ pattern : String
        ~ filename : String
        ~ latch : CountDownLatch
        + patternmatch()
        + run()
    }
  }
  

  article o-- fileHandler : file
  patternmatch -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
